<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/instruction_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            card_view:cardCornerRadius="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="5dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Welcome to WiFinder!"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction_card_text"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="OK"
                    android:onClick="hideInstructionCard"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/input_name_card"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            card_view:cardCornerRadius="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="5dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_introduction_title"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_name_card_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textPersonName"
                        android:imeOptions="actionDone"
                        android:id="@+id/input_name_card_edit_text"
                        android:hint="@string/input_name_edit_text"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/input_name_card_text"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="OK"
                    android:onClick="inputUserName"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_fab_home_white" />

</android.support.design.widget.CoordinatorLayout>
